--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <div class="container">
-      <form class="add-toy-form">
+      <form class="add-toy-form" id="toy-form">
         <h3>Create a toy!</h3>
 
         <input
@@ -23,6 +23,8 @@
           value=""
           placeholder="Enter a toy's name..."
           class="input-text"
+          id="new-toy-name"
+          required
         />
         <br />
         <input
@@ -31,17 +33,14 @@
           value=""
           placeholder="Enter a toy's image URL..."
           class="input-text"
+          id="new-toy-img"
+          required
         />
         <br />
-        <input
-          type="submit"
-          name="submit"
-          value="Create Toy"
-          class="submit"
-        />
+        <input type="submit" name="submit" value="Create Toy" class="submit" />
       </form>
     </div>
-    <p style="text-align:center">
+    <p style="text-align: center">
       Andy needs your help! <button id="new-toy-btn">Add a new toy!</button>
     </p>
 
